--- a/translations/tengyur/placeholders/027-002_toh1662-sarvakalpasamayogadakinimayasambarottaratanratika.xml
+++ b/translations/tengyur/placeholders/027-002_toh1662-sarvakalpasamayogadakinimayasambarottaratanratika.xml
@@ -4,10 +4,12 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
+                <title xml:lang="en" type="mainTitle">A Commentary on the Continuation Tantra of the Ḍākinījālaśaṃvara, the Union of All the Buddhas known as “The Complete Collection of Ceremonial Rituals”</title>
+                <title xml:lang="Sa-Ltn" type="mainTitle">Sarva­kalpa­samuccaya­nāma­sarva­buddha­samayoga­ḍākinījāla­śambarottara­tantra­ṭīkā</title>
                 <title xml:lang="bo" type="mainTitle">རྟོག་པ་ཐམས་ཅད་འདུས་པ་ཞེས་བྱ་བ་སངས་རྒྱས་ཐམས་ཅད་དང་མཉམ་པར་སྦྱོར་བ་མཁའ་འགྲོ་མ་སྒྱུ་མ་བདེ་བའི་མཆོག་གི་རྒྱུད་ཕྱི་མའི་ཕྱི་མ་རྣམ་པར་བཤད་པ།</title>
                 <title xml:lang="Bo-Ltn" type="mainTitle">rtog pa thams cad 'dus pa zhes bya ba sangs rgyas thams cad dang mnyam par sbyor ba mkha' 'gro ma sgyu ma bde ba'i mchog gi rgyud phyi ma'i phyi ma rnam par bshad pa/</title>
-                <title xml:lang="Sa-Ltn" type="mainTitle">Sarva­kalpa­samuccaya­nāma­sarva­buddha­samayoga­ḍākinījāla­śambarottara­tantra­ṭīkā</title>
-                <title xml:lang="en" type="mainTitle">A Commentary on the Continuation Tantra of the Ḍākinījālaśaṃvara, the Union of All the Buddhas known as “The Complete Collection of Ceremonial Rituals”</title>
+                <author role="translatorMain" xml:id="UT23703-027-002-7">84000 Associate Translators</author>
+                <author role="translatorEng" xml:id="UT23703-027-002-8">Adam Krug</author>
             </titleStmt>
             <publicationStmt>
                 <availability status="3"/>
@@ -40,6 +42,12 @@
                     <desc>3</desc>
                 </change>
                 <change who="#line-tofte" when="2023-09-28T13:36:50.578Z" type="text-version" status="0.0.1" xml:id="UT23703-027-002-6">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-28T13:37:24.442Z" type="text-version" status="0.0.1" xml:id="UT23703-027-002-9">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-28T14:00:46.888Z" type="text-version" status="0.0.1" xml:id="UT23703-027-002-10">
                     <desc>User set version to 0.0.1</desc>
                 </change>
             </revisionDesc>
