--- a/translations/tengyur/placeholders/027-003_toh1663-sarvabuddhasamayogapanjika.xml
+++ b/translations/tengyur/placeholders/027-003_toh1663-sarvabuddhasamayogapanjika.xml
@@ -9,17 +9,18 @@
                 <title xml:lang="Sa-Ltn" type="mainTitle">Sarva­buddha­samayoga­pañjikā</title>
                 <title xml:lang="en" type="mainTitle">A Commentary on the Difficult Points of the “Glorious Union of All the Buddhas Tantra”</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT23703-027-003"/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh1663" type="text">
                     <ref>Toh 1663</ref>
                     <biblScope>ff. 58v-116r</biblScope>
-                    <author ref="eft:entity-17902" xml:lang="Sa-Ltn">Praśāntamitra</author>
-                    <author role="translatorTib" ref="eft:entity-17754" xml:lang="Sa-Ltn">Dharmaśrībhadra</author>
-                    <author role="translatorTib" ref="eft:entity-17459" xml:lang="Bo-Ltn">zhu chen gyi lo tsa ba dge slong rin chen bzang po</author>
-                    <author role="translatorTib" ref="eft:entity-17476" xml:lang="Sa-Ltn">Śraddhākaravarman</author>
+                    <author xml:lang="Sa-Ltn" xml:id="UT23703-027-003-1">Praśāntamitra</author>
+                    <author role="translatorTib" xml:lang="Sa-Ltn" xml:id="UT23703-027-003-2">Dharmaśrībhadra</author>
+                    <author role="translatorTib" xml:lang="Bo-Ltn" xml:id="UT23703-027-003-3">zhu chen gyi lo tsa ba dge slong rin chen bzang po</author>
+                    <author role="translatorTib" xml:lang="Sa-Ltn" xml:id="UT23703-027-003-4">Śraddhākaravarman</author>
                     <location work="UT23703" count-pages="116">
                         <volume number="27" start-page="116" end-page="231"/>
                     </location>
@@ -29,10 +30,21 @@
                 <link type="isCommentaryOf" target="toh366"/>
                 <link type="isCommentaryOf" target="toh367"/>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-11-25T10:47:25.618Z" user="john">25/11/2021 10:47:25</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-1607-1682_PH_new_v2.4.xml" date-time="2021-11-02T13:27:55.711Z" user="admin"/>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2021-11-02T13:27:55.711Z" type="import" xml:id="UT23703-027-003-5" source="tengyur-data-1607-1682_PH_new_v2.4.xml">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT23703-027-003-6">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-28T14:01:33.224Z" type="translation-status" status="3" xml:id="UT23703-027-003-7">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-28T14:01:33.224Z" type="text-version" status="0.0.1" xml:id="UT23703-027-003-8">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
