--- a/translations/kangyur/placeholders/035-030_toh44-30-chapter_30_vajradhvajas_dedication.xml
+++ b/translations/kangyur/placeholders/035-030_toh44-30-chapter_30_vajradhvajas_dedication.xml
@@ -10,13 +10,14 @@
                 <title type="otherTitle" xml:lang="en">[Note: This chapter contains 10 subchapters]</title>
                 <title type="otherTitle" xml:lang="zh">《華嚴經 》之《金剛幢迴向品》</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">byang chub sems dpa' rdo rje rgyal mtshan gyis yongs su bsngo ba'i le'u/</title>
-                <sponsor ref="sponsors.xml#sponsor-208">释圆意, 释观山, 王建明, 王丽云, 徐冠群, 王洁, 徐一惠</sponsor>
+                <sponsor xml:id="UT22084-035-030-1">释圆意, 释观山, 王建明, 王丽云, 徐冠群, 王洁, 徐一惠</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.3 <date/>
+                <edition>v 0.0.5 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-035-030"/>
             </publicationStmt>
             <sourceDesc>
@@ -31,11 +32,24 @@
                     <idno source-id="O1JC114941JC14698" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-10T16:16:50.124Z" user="admin">10/06/2022 16:16:50</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-16T16:27:17.387Z" user="amy">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-10T17:18:04.169Z" user="amy">Auto (update-titles)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#amy" when="2021-03-16T16:27:17.387Z" type="text-version" status="0.0.1" xml:id="UT22084-035-030-2">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#amy" when="2021-05-10T17:18:04.169Z" type="text-version" status="0.0.2" xml:id="UT22084-035-030-3">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-035-030-4">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-28T14:02:39.046Z" type="translation-status" status="3" xml:id="UT22084-035-030-5">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-28T14:02:39.046Z" type="text-version" status="0.0.5" xml:id="UT22084-035-030-6">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
