--- a/translations/kangyur/placeholders/036-003_toh44-32-chapter_32_the_teaching_of_samantabhadra.xml
+++ b/translations/kangyur/placeholders/036-003_toh44-32-chapter_32_the_teaching_of_samantabhadra.xml
@@ -9,13 +9,14 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">kun bzang bstan pa'i le'u/</title>
                 <title type="otherTitle" xml:lang="zh">《華嚴經 》之《普賢品》</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa kun tu bzang po'i spyod pa bstan pa/</title>
-                <sponsor ref="sponsors.xml#sponsor-35">Thirty, Twenty</sponsor>
+                <sponsor xml:id="UT22084-036-003-1">Thirty, Twenty</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date/>
+                <edition>v 0.0.6 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-036-003"/>
             </publicationStmt>
             <sourceDesc>
@@ -29,12 +30,27 @@
                     <idno source-id="O1JC114941JC14700" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-29T15:48:32.49Z" user="admin">29/06/2022 15:48:32</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-17T02:18:49.214Z" user="amy">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2021-05-11T05:14:43.021Z" user="amy">Auto (update-titles)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2022-06-29T15:48:30.507Z" user="cabie-sim">Auto (update-titles)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#amy" when="2021-03-17T02:18:49.214Z" type="text-version" status="0.0.1" xml:id="UT22084-036-003-2">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#amy" when="2021-05-11T05:14:43.021Z" type="text-version" status="0.0.3" xml:id="UT22084-036-003-3">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-06-29T15:48:30.507Z" type="text-version" status="0.0.4" xml:id="UT22084-036-003-4">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-036-003-5">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-28T14:03:35.946Z" type="translation-status" status="3" xml:id="UT22084-036-003-6">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-28T14:03:35.946Z" type="text-version" status="0.0.6" xml:id="UT22084-036-003-7">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
