--- a/translations/kangyur/placeholders/044-002_toh82-the_sutra_of_the_chapter_of_the_bodhisattva_jnanottaras_questions.xml
+++ b/translations/kangyur/placeholders/044-002_toh82-the_sutra_of_the_chapter_of_the_bodhisattva_jnanottaras_questions.xml
@@ -12,16 +12,15 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryasarvabuddha­mahārahasyopāyakośalya­jñānottarabodhisattva­paripṛcchāparivarta­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sangs rgyas thams cad kyi gsang chen thabs la mkhas pa/ byang chub sems dpa' ye shes dam pas zhus pa'i le'u zhes bya ba theg pa chen po'i mdo</title>
                 <title type="otherTitle" xml:lang="zh">《智勝菩薩所問品》(大正藏：大寶積經大乘方便會第三十八) </title>
-                <author role="translatorMain" ref="eft:team-40"/>
-                <author role="translatorEng" ref="eft:person-141">Charles Hastings</author>
-                <sponsor ref="sponsors.xml#sponsor-195">陳登修慈悲基金會，陳謝月娥，陳明傑，陳信宏，陳羽柔，嚴秀英，嚴金官闔家</sponsor>
+                <sponsor xml:id="UT22084-044-002-1">陳登修慈悲基金會，陳謝月娥，陳明傑，陳信宏，陳羽柔，嚴秀英，嚴金官闔家</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2019</date>
+                <edition>v 0.0.7 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-044-002"/>
                 <note>An early mistake in the assigning of UT numbers within the 84000 project means that these ids diverge slightly from the standard logic.</note>
                 <date/>
@@ -37,13 +36,33 @@
                     <idno source-id="O1JC114941JC11624" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-22T13:14:18.001Z" user="admin">22/06/2023 13:14:18</note>
-                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-01-17T14:16:56.14Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="" date-time="2023-06-22T13:14:13.733Z" user="line-tofte"/>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2023-06-22T13:14:13.733Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-044-002-2">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#line-tofte" when="2022-01-17T14:16:56.14Z" type="text-version" status="0.0.2" xml:id="UT22084-044-002-3">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-22T13:14:13.733Z" type="translation-status" status="" xml:id="UT22084-044-002-4">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2023-06-22T13:14:13.733Z" type="text-version" status="0.0.4" xml:id="UT22084-044-002-5">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-22T13:14:50.031Z" type="text-version" status="0.0.5" xml:id="UT22084-044-002-6">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.6" xml:id="UT22084-044-002-7">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-28T14:06:57.312Z" type="translation-status" status="3" xml:id="UT22084-044-002-8">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-28T14:06:57.312Z" type="text-version" status="0.0.7" xml:id="UT22084-044-002-9">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
