--- a/translations/kangyur/placeholders/066-019_toh261-the_sutra_on_skill_in_means.xml
+++ b/translations/kangyur/placeholders/066-019_toh261-the_sutra_on_skill_in_means.xml
@@ -10,16 +10,17 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">upāyakauśalya</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryopāyakauśalyanāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa thabs mkhas pa zhes bya ba theg pa chen po'i mdo</title>
-                <author role="translatorMain" ref="eft:team-40"/>
-                <author role="translatorEng" ref="eft:person-324">Mark Tatz</author>
-                <author role="translatorEng" ref="eft:person-141">Charles Hastings</author>
+                <author role="translatorMain" xml:id="UT22084-066-019-1"/>
+                <author role="translatorEng" xml:id="UT22084-066-019-2">Mark Tatz</author>
+                <author role="translatorEng" xml:id="UT22084-066-019-3">Charles Hastings</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2019</date>
+                <edition>v 0.0.6 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-066-019"/>
                 <date/>
             </publicationStmt>
@@ -34,16 +35,33 @@
                     <idno source-id="O1JC114941JC11914" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-22T13:15:27.964Z" user="admin">22/06/2023 13:15:27</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2022-01-17T14:14:52.697Z" user="line-tofte">Auto (update-contributors)</note>
-
-    <note type="updated" update="text-version" value="0.0.3" date-time="2022-01-17T14:15:51.512Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="" date-time="2023-06-22T13:15:23.688Z" user="line-tofte"/>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2023-06-22T13:15:23.688Z" user="line-tofte">Auto (update-publication-status)</note>
-</notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-066-019-4">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#line-tofte" when="2022-01-17T14:14:52.697Z" type="text-version" status="0.0.2" xml:id="UT22084-066-019-5">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-01-17T14:15:51.512Z" type="text-version" status="0.0.3" xml:id="UT22084-066-019-6">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-22T13:15:23.688Z" type="translation-status" status="" xml:id="UT22084-066-019-7">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2023-06-22T13:15:23.688Z" type="text-version" status="0.0.4" xml:id="UT22084-066-019-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-066-019-9">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-28T14:07:54.822Z" type="translation-status" status="3" xml:id="UT22084-066-019-10">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-28T14:07:54.822Z" type="text-version" status="0.0.6" xml:id="UT22084-066-019-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
