--- a/translations/kangyur/placeholders/076-007_toh353-the_sutra_of_repaying_the_kindness_of_the_buddha_who_has_great_skill_in_means.xml
+++ b/translations/kangyur/placeholders/076-007_toh353-the_sutra_of_repaying_the_kindness_of_the_buddha_who_has_great_skill_in_means.xml
@@ -10,10 +10,11 @@
                 <title type="otherTitle" xml:lang="zh">大方便佛報恩經 (Da fangbian fo bao’en jing)</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.2 <date>2020</date>
+                <edition>v 0.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-076-007"/>
                 <date/>
             </publicationStmt>
@@ -28,14 +29,30 @@
                     <idno source-id="O1JC114941JC12043" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 14/11/2018 at 17:19:02 by celso</note>
-            
-    <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:54:26.637Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:54:26.637Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="translation-status" value="" date-time="2020-11-30T09:51:46.591Z" user="line-tofte"/>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-30T09:51:46.591Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2020-10-02T13:54:26.637Z" type="translation-status" status="4" xml:id="UT22084-076-007-1">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2020-10-02T13:54:26.637Z" type="text-version" status="0.0.1" xml:id="UT22084-076-007-2">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2020-11-30T09:51:46.591Z" type="translation-status" status="" xml:id="UT22084-076-007-3">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2020-11-30T09:51:46.591Z" type="text-version" status="0.0.2" xml:id="UT22084-076-007-4">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-076-007-5">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-28T14:09:02.372Z" type="translation-status" status="3" xml:id="UT22084-076-007-6">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-28T14:09:02.372Z" type="text-version" status="0.0.4" xml:id="UT22084-076-007-7">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
