--- a/translations/kangyur/translations/034-029_toh41-the_sutra_of_the_sun.xml
+++ b/translations/kangyur/translations/034-029_toh41-the_sutra_of_the_sun.xml
@@ -22,7 +22,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-034-029-156">John Canti</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -168,6 +168,9 @@
                 <change who="#martina-cotter" when="2023-09-26T21:39:05.433Z" type="text-version" status="1.0.0" xml:id="UT22084-034-029-162">
                     <desc>First published version</desc>
                 </change>
+                <change who="#celso" when="2023-09-28T23:30:39.319Z" type="text-version" status="1.0.1" xml:id="UT22084-034-029-164">
+                    <desc>Added missing milestone i.1 to the intro</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
         </teiHeader>
@@ -208,6 +211,7 @@
                         <div type="introduction">
                                 <head type="introduction" tid="8">Introduction</head>
                                 <div type="section" xml:id="UT22084-034-029-introduction-1">
+                                  <milestone unit="chunk" xml:id="UT22084-034-029-163"/>
                                         <p tid="10">
                         <title xml:lang="en">The Sūtra of the
                                                   Sun</title> is a short discourse set in Śrāvastī
