--- a/translations/kangyur/translations/034-029_toh41-the_sutra_of_the_sun.xml
+++ b/translations/kangyur/translations/034-029_toh41-the_sutra_of_the_sun.xml
@@ -22,7 +22,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-034-029-156">John Canti</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -170,6 +170,9 @@
                 </change>
                 <change who="#celso" when="2023-09-28T23:30:39.319Z" type="text-version" status="1.0.1" xml:id="UT22084-034-029-164">
                     <desc>Added missing milestone i.1 to the intro</desc>
+                </change>
+                <change who="#celso" when="2023-09-28T23:33:04.195Z" type="text-version" status="1.0.2" xml:id="UT22084-034-029-165">
+                    <desc>recached glossary to fix glossary links to i.1</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
