--- a/translations/kangyur/translations/064-002_toh232-the_great_cloud_1.xml
+++ b/translations/kangyur/translations/064-002_toh232-the_great_cloud_1.xml
@@ -25,7 +25,7 @@
         <sponsor xml:id="UT22084-064-002-1690">anonymous</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.1.13 <date>2023</date>
+                <edition>v 1.1.14 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -210,6 +210,9 @@
                 <change who="#celso" when="2023-09-14T22:49:19.616Z" type="text-version" status="1.1.13" xml:id="UT22084-064-002-1735">
                     <desc>Added missing lines discovered during TM alignment.</desc>
                 </change>
+                <change who="#celso" when="2023-09-29T01:17:30.478Z" type="text-version" status="1.1.14" xml:id="UT22084-064-002-1736">
+                    <desc>adjusted milestone 1.1</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
   </teiHeader>
@@ -388,12 +391,12 @@
         <head type="titleMain" tid="20">The Great Cloud</head>
         <div type="chapter" xml:id="UT22084-064-002-chapter-1">
           <head tid="23" type="chapter">Chapter 1</head>
+          <milestone unit="chunk" xml:id="UT22084-064-002-23"/>
           <p tid="24">
                         <ref cRef="B1" type="bampo"/>
             <ref cRef="F.113.a" type="folio" xml:id="UT22084-064-002-1464"/> Homage to all buddhas, bodhisattvas, exalted śrāvakas, and
             pratyekabuddhas.</p>
           <lb/>
-          <milestone unit="chunk" xml:id="UT22084-064-002-23"/>
           <p tid="26">Thus did I hear at one time. The Bhagavān was residing on Vulture Peak in Rājagṛha with an assembly of nine million eight
             hundred thousand bhikṣus including Mahākāśyapa. All of them were worthy ones who had exhausted their defilements, had attained mastery,
             and were free from afflictions. They were omniscient ones, great elephants, their minds perfectly liberated, their wisdom perfectly
@@ -6378,7 +6381,7 @@
           <item>
                         <gloss type="term" xml:id="UT22084-064-002-992">
                             <term type="translationMain">element</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">dhātu </term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">dhātu</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">khams</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཁམས།</term>
                             <note type="definition">
@@ -6390,7 +6393,7 @@
           <item>
                         <gloss type="term" xml:id="UT22084-064-002-993">
                             <term type="translationMain">four elements</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">caturdhātu </term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">caturdhātu</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">khams bzhi</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཁམས་བཞི།</term>
                             <note type="definition">
@@ -6413,7 +6416,7 @@
                         <gloss type="term" xml:id="UT22084-064-002-995">
                             <term type="translationMain">sense base</term>
                             <term type="translationAlternative">sensory sphere</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">āyatana </term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">āyatana</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">skye mched</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">སྐྱེ་མཆེད།</term>
                             <note type="definition">
@@ -6622,7 +6625,7 @@
           <item>
                         <gloss type="term" xml:id="UT22084-064-002-1013">
                             <term type="translationMain">essence of the Tathāgata</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">tathāgata­garbha </term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">tathāgata­garbha</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">de bzhin gshegs pa’i snying po</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">དེ་བཞིན་གཤེགས་པའི་སྙིང་པོ།</term>
                             <note type="definition">
@@ -6670,7 +6673,7 @@
           <item>
                         <gloss type="term" xml:id="UT22084-064-002-1017">
                             <term type="translationMain">unforgivable offenses</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">pārājikā </term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">pārājikā</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">pham pa’i ’gal ba</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཕམ་པའི་འགལ་བ།</term>
                             <note type="definition">
@@ -7720,7 +7723,7 @@
           <item>
                         <gloss type="person" xml:id="UT22084-064-002-1114">
                             <term type="translationMain">Kumāra</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">kumāra </term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">kumāra</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">gzhon nu</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">གཞོན་ནུ།</term>
                             <note type="definition">
@@ -7756,7 +7759,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">brahmā</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">tshangs pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཚངས་པ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>One of the principal gods in the Vedic pantheon.</p>
                             </note>
                         </gloss>
@@ -11183,7 +11186,7 @@
           <item>
                         <gloss type="place" xml:id="UT22084-064-002-1430">
                             <term type="translationMain">Endurance</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">sahā </term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">sahā</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">’jig rten gyi khams mi mjed</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">འཇིག་རྟེན་གྱི་ཁམས་མི་མཇེད།</term>
                             <note type="definition">
