--- a/translations/kangyur/translations/066-018_toh260_akashagarbha_sutra.xml
+++ b/translations/kangyur/translations/066-018_toh260_akashagarbha_sutra.xml
@@ -26,7 +26,7 @@
                 <consultant role="projectManager" xml:id="UT22084-066-018-375">Rev. Dr. Chodrung Kunga</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 2.18.20 <date>2023</date>
+                <edition>v 2.18.21 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -139,6 +139,9 @@
                 </change>
                 <change who="#andre" when="2023-08-24T16:57:00.524Z" type="text-version" status="2.18.20" xml:id="UT22084-066-018-406">
                     <desc>Glossary TEI fixes 2</desc>
+                </change>
+                <change who="#celso" when="2023-09-29T01:19:37.984Z" type="text-version" status="2.18.21" xml:id="UT22084-066-018-408">
+                    <desc>added missing milestone c.1</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -1524,6 +1527,7 @@
                 </div>
                 <div type="colophon" xml:id="UT22084-066-018-colophon">
                     <head type="colophon" tid="215">Colophon</head>
+                    <milestone unit="chunk" xml:id="UT22084-066-018-407"/>
                     <p tid="172">Edited, translated, and finalized by the Indian preceptor Śākyaprabha and Bandé
                         Ratnarakṣita.</p>
                 </div>
