--- a/translations/kangyur/placeholders/059-013_toh170-the_sutra_of_the_questions_of_the_brahmani_srimati.xml
+++ b/translations/kangyur/placeholders/059-013_toh170-the_sutra_of_the_questions_of_the_brahmani_srimati.xml
@@ -9,18 +9,19 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">bram ze mo dpal ldan mas zhus pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryaśrīmatībrāhmaṇī­paripṛcchā­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa bram ze mo dpal ldan mas zhus pa zhes bya ba theg pa chen po'i mdo</title>
-                <author role="translatorMain" xml:id="UT22084-059-013-1"/>
+                <author role="translatorMain" xml:id="UT22084-059-013-1">Subhashita Translation Group</author>
                 <editor role="reviser" xml:id="UT22084-059-013-2">Benjamin Ewing</editor>
                 <author role="translatorEng" xml:id="UT22084-059-013-3">Lowell Cook</author>
                 <consultant role="projectManager" xml:id="UT22084-059-013-4">Lowell Cook</consultant>
                 <editor role="associateEditor" xml:id="UT22084-059-013-5">George FitzHerbert</editor>
+                <editor role="copyEditor" xml:id="UT22084-059-013-31">Dawn Collins</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.11 <date>2023</date>
+                <edition>v 0.0.13 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-059-013"/>
                 <date/>
             </publicationStmt>
@@ -89,6 +90,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2023-09-08T09:51:44.859Z" type="text-version" status="0.0.11" xml:id="UT22084-059-013-25">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-08T09:52:30.41Z" type="text-version" status="0.0.12" xml:id="UT22084-059-013-32">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-02T09:00:54.806Z" type="translation-status" status="2.d" xml:id="UT22084-059-013-33">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-02T09:00:54.806Z" type="text-version" status="0.0.13" xml:id="UT22084-059-013-34">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
