--- a/translations/kangyur/placeholders/103-004_toh4568-3-chapter_3_publication_history_of_the_conquerors_extant_scriptures.xml
+++ b/translations/kangyur/placeholders/103-004_toh4568-3-chapter_3_publication_history_of_the_conquerors_extant_scriptures.xml
@@ -16,11 +16,11 @@
                 <sponsor xml:id="UT22084-103-004-7">Chan Wing Fai, Lam Wai Ling, Chan Oi Yi, Chan Tung Mei, Chan Yu Ka, Chan Sui Li, Chan Ya Ho, Chan Yu Lin, Zhong Sheng jian, Lin Miao Jun.</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.16 <date>2023</date>
+                <edition>v 0.0.17 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-103-004"/>
                 <date/>
             </publicationStmt>
@@ -104,6 +104,12 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2023-09-06T08:05:11.759Z" type="text-version" status="0.0.16" xml:id="UT22084-103-004-30">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-02T09:52:18.245Z" type="translation-status" status="2.b" xml:id="UT22084-103-004-31">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-02T09:52:18.245Z" type="text-version" status="0.0.17" xml:id="UT22084-103-004-32">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
