--- a/translations/kangyur/placeholders/012-002_toh7a-preeminent_account_of_discipline.xml
+++ b/translations/kangyur/placeholders/012-002_toh7a-preeminent_account_of_discipline.xml
@@ -10,10 +10,11 @@
                 <title type="otherTitle" xml:lang="en">[Note: a variant but more complete version of the preceding text.]</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-012-002"/>
             </publicationStmt>
             <sourceDesc>
@@ -28,9 +29,21 @@
                     <idno source-id="O1JC114941JC11517" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-23T10:58:22.133Z" user="admin">23/01/2023 10:58:22</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-01-23T10:58:19.32Z" user="line-tofte">0.0.1</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2023-01-23T10:58:19.32Z" type="text-version" status="0.0.1" xml:id="UT22084-012-002-1">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT22084-012-002-2">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T13:26:40.72Z" type="translation-status" status="3" xml:id="UT22084-012-002-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T13:26:40.72Z" type="text-version" status="0.0.3" xml:id="UT22084-012-002-4">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
