--- a/translations/tengyur/placeholders/156-001_toh4112-aryasarvastivadimulabhiksunipratimoksasutravrtti.xml
+++ b/translations/tengyur/placeholders/156-001_toh4112-aryasarvastivadimulabhiksunipratimoksasutravrtti.xml
@@ -8,14 +8,15 @@
                 <title xml:lang="Bo-Ltn" type="mainTitle">'phags pa thams cad yod par smra ba'i rtsa ba'i dge slong ma'i so sor thar pa'i mdo'i 'grel pa/</title>
                 <title xml:lang="en" type="mainTitle">A Running Commentary on the “Pratimokṣa Sūtra of Nuns” in the Noble Mūlasarvāstivāda [Lineage]</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT23703-156-001"/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh4112" type="text">
                     <ref>Toh 4112</ref>
                     <biblScope>ff. 1v-177r</biblScope>
-                    <author ref="eft:entity-17509" xml:lang="en">Anon</author>
+                    <author xml:lang="en" xml:id="UT23703-156-001-1">Anon</author>
                     <location work="UT23703" count-pages="352">
                         <volume number="156" start-page="2" end-page="353"/>
                     </location>
@@ -24,10 +25,21 @@
                 </bibl>
                 <link type="isCommentaryOf" target="toh4"/>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 10:34:33 by admin</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-4104-4149_PH_new_v2.4.xml" date-time="2021-11-02T14:17:45.617Z" user="admin"/>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2021-11-02T14:17:45.617Z" type="import" xml:id="UT23703-156-001-2" source="tengyur-data-4104-4149_PH_new_v2.4.xml">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT23703-156-001-3">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T13:28:04.662Z" type="translation-status" status="3" xml:id="UT23703-156-001-4">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T13:28:04.662Z" type="text-version" status="0.0.1" xml:id="UT23703-156-001-5">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
