--- a/translations/kangyur/placeholders/083-014_toh466-the_net_of_magical_illusion.xml
+++ b/translations/kangyur/placeholders/083-014_toh466-the_net_of_magical_illusion.xml
@@ -10,7 +10,8 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">rgyud kyi rgyal po chen po sgyu 'phrul dra ba zhes bya ba/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">māyājālamahātantrarājanāma</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-083-014"/>
             </publicationStmt>
             <sourceDesc>
@@ -24,9 +25,19 @@
                     <idno source-id="O1JC114941JC12178" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:35:10 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-083-014-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T13:30:44.169Z" type="translation-status" status="3" xml:id="UT22084-083-014-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T13:30:44.169Z" type="text-version" status="0.0.1" xml:id="UT22084-083-014-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
