--- a/translations/kangyur/placeholders/087-001_toh496-the_vajrapani_empowerment.xml
+++ b/translations/kangyur/placeholders/087-001_toh496-the_vajrapani_empowerment.xml
@@ -10,7 +10,8 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lag na rdo rje dbang bskur ba'i rgyud chen po/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryavajrapāṇyabhiṣekamahātantra</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-087-001"/>
             </publicationStmt>
             <sourceDesc>
@@ -24,9 +25,19 @@
                     <idno source-id="O1JC114941JC12216" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:33:48 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-087-001-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T13:31:35.081Z" type="translation-status" status="3" xml:id="UT22084-087-001-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T13:31:35.081Z" type="text-version" status="0.0.1" xml:id="UT22084-087-001-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
