--- a/translations/kangyur/placeholders/094-021_toh744-the_tantra_of_vajrapatala.xml
+++ b/translations/kangyur/placeholders/094-021_toh744-the_tantra_of_vajrapatala.xml
@@ -11,7 +11,8 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryavajrapātālanāmatantrarāja</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn"/>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-094-021"/>
             </publicationStmt>
             <sourceDesc>
@@ -25,9 +26,19 @@
                     <idno source-id="O1JC114941JC12486" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:31:27 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-094-021-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T13:32:35.363Z" type="translation-status" status="3" xml:id="UT22084-094-021-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T13:32:35.363Z" type="text-version" status="0.0.1" xml:id="UT22084-094-021-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
