--- a/translations/kangyur/placeholders/096-055_toh806-tantra_of_the_procedures_common_to_all_mandalas.xml
+++ b/translations/kangyur/placeholders/096-055_toh806-tantra_of_the_procedures_common_to_all_mandalas.xml
@@ -9,7 +9,8 @@
                 <title type="mainTitle" xml:lang="en">Tantra of the Procedures Common to All Maṇḍalas</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">dkyil 'khor thams cad kyi spyi'i cho ga gsang ba'i rgyud/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-096-055"/>
             </publicationStmt>
             <sourceDesc>
@@ -23,9 +24,19 @@
                     <idno source-id="O1JC114941JC12552" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:38:05 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-096-055-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T13:35:34.968Z" type="translation-status" status="3" xml:id="UT22084-096-055-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T13:35:34.968Z" type="text-version" status="0.0.1" xml:id="UT22084-096-055-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
