--- a/translations/tengyur/placeholders/061-002_toh2513-mayajalamahatantrarajatikavakhya.xml
+++ b/translations/tengyur/placeholders/061-002_toh2513-mayajalamahatantrarajatikavakhya.xml
@@ -9,15 +9,16 @@
                 <title xml:lang="Sa-Ltn" type="mainTitle">Māyājāla­mahātantra­rāja­ṭīkā</title>
                 <title xml:lang="en" type="mainTitle">An Extensive Explanation of the King of Tantras called “The Net of Magical Illusions”</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT23703-061-002"/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh2513" type="text">
                     <ref>Toh 2513</ref>
                     <biblScope>ff. 192v-287v</biblScope>
-                    <author ref="eft:entity-17901" xml:lang="Sa-Ltn">Ānandagarbha</author>
-                    <author role="translatorTib" ref="eft:entity-17459" xml:lang="Bo-Ltn">zhu chen gyi lo tsa ba dge slong rin chen bzang po</author>
+                    <author xml:lang="Sa-Ltn" xml:id="UT23703-061-002-1">Ānandagarbha</author>
+                    <author role="translatorTib" xml:lang="Bo-Ltn" xml:id="UT23703-061-002-2">zhu chen gyi lo tsa ba dge slong rin chen bzang po</author>
                     <location work="UT23703" count-pages="191">
                         <volume number="61" start-page="384" end-page="574"/>
                     </location>
@@ -26,12 +27,25 @@
                 </bibl>
                 <link type="isCommentaryOf" target="toh466"/>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 10:25:11 by admin</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-2501-2531_PH_new_v2.4.xml" date-time="2021-11-02T13:47:33.72Z" user="admin"/>
-                <note type="updated" update="general" import="tengyur-data-2501-2531_PH_new_v2.4.xml" date-time="2021-11-02T13:47:33.72Z" user="admin">Although this section of the Tengyur covers commentaries on tantras of the “Yoga” class, the root text being commented upon is classified as an
-            “Anuttarayoga” class tantra in the Kangyur.</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2021-11-02T13:47:33.72Z" type="import" xml:id="UT23703-061-002-3" source="tengyur-data-2501-2531_PH_new_v2.4.xml">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2021-11-02T13:47:33.72Z" type="general" xml:id="UT23703-061-002-4" source="tengyur-data-2501-2531_PH_new_v2.4.xml">
+                    <desc>Although this section of the Tengyur covers commentaries on tantras of the “Yoga” class, the root text being commented upon is classified as an
+            “Anuttarayoga” class tantra in the Kangyur.</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT23703-061-002-5">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T13:36:35.021Z" type="translation-status" status="3" xml:id="UT23703-061-002-6">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T13:36:35.021Z" type="text-version" status="0.0.1" xml:id="UT23703-061-002-7">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
