--- a/translations/tengyur/placeholders/069-001_toh2662-vairocanabhisambodhitantrapindartha.xml
+++ b/translations/tengyur/placeholders/069-001_toh2662-vairocanabhisambodhitantrapindartha.xml
@@ -9,16 +9,17 @@
                 <title xml:lang="Sa-Ltn" type="mainTitle">Vairocanābhisambodhi­tantra­piṇḍārtha</title>
                 <title xml:lang="en" type="mainTitle">The Concise Meaning of “The Manifest Complete Enlightenment of Vairocana Tantra”</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT23703-069-001"/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh2662" type="text">
                     <ref>Toh 2662</ref>
                     <biblScope>ff. 1v-65r</biblScope>
-                    <author ref="eft:entity-18189" xml:lang="Sa-Ltn">Buddhaguhya</author>
-                    <author role="translatorTib" ref="eft:entity-17455" xml:lang="Bo-Ltn">zhu chen gyi lo tsa ba dge slong dpal brtsegs rak+si ta</author>
-                    <author role="translatorTib" ref="eft:entity-17468" xml:lang="Sa-Ltn">Śīlendrabodhi</author>
+                    <author xml:lang="Sa-Ltn" xml:id="UT23703-069-001-1">Buddhaguhya</author>
+                    <author role="translatorTib" xml:lang="Bo-Ltn" xml:id="UT23703-069-001-2">zhu chen gyi lo tsa ba dge slong dpal brtsegs rak+si ta</author>
+                    <author role="translatorTib" xml:lang="Sa-Ltn" xml:id="UT23703-069-001-3">Śīlendrabodhi</author>
                     <location work="UT23703" count-pages="129">
                         <volume number="69" start-page="1" end-page="129"/>
                     </location>
@@ -27,10 +28,21 @@
                 </bibl>
                 <link type="isCommentaryOf" target="toh494"/>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-11-25T10:51:06.922Z" user="john">25/11/2021 10:51:06</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-2623-2669_PH_new_v2.4.xml" date-time="2021-11-02T13:52:02.501Z" user="admin"/>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2021-11-02T13:52:02.501Z" type="import" xml:id="UT23703-069-001-4" source="tengyur-data-2623-2669_PH_new_v2.4.xml">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT23703-069-001-5">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T13:42:05.566Z" type="translation-status" status="3" xml:id="UT23703-069-001-6">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T13:42:05.566Z" type="text-version" status="0.0.1" xml:id="UT23703-069-001-7">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
