--- a/translations/kangyur/placeholders/034-008_toh20,491-the_twentyfive_entrances_to_the_perfection_of_wisdom.xml
+++ b/translations/kangyur/placeholders/034-008_toh20,491-the_twentyfive_entrances_to_the_perfection_of_wisdom.xml
@@ -14,7 +14,8 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa shes rab kyi pha rol tu phyin pa'i sgo nyi shu rtsa lnga pa zhes bya ba theg pa chen po'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryapañcaviṃśatikāprajñā­pāramitāmukha­nāmamahāyānasūtra</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-034-008"/>
             </publicationStmt>
             <sourceDesc>
@@ -37,9 +38,19 @@
                     <idno source-id="O1JC114941JC12209" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:26:00 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-034-008-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T13:43:56.118Z" type="translation-status" status="3" xml:id="UT22084-034-008-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T13:43:56.118Z" type="text-version" status="0.0.1" xml:id="UT22084-034-008-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
