--- a/translations/kangyur/placeholders/079-004_toh377-the_awakening_of_varahi.xml
+++ b/translations/kangyur/placeholders/079-004_toh377-the_awakening_of_varahi.xml
@@ -11,7 +11,8 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">ākhyātatantrottara­vajravārāhyabhidhānād vārāhyabhibodhanaṃ nāma</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">From the supplementary explanatory tantra, "The Awakening of Vārāhī"</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-079-004"/>
             </publicationStmt>
             <sourceDesc>
@@ -25,9 +26,19 @@
                     <idno source-id="O1JC114941JC12075" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:28:15 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-079-004-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T13:44:47.499Z" type="translation-status" status="3" xml:id="UT22084-079-004-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T13:44:47.499Z" type="text-version" status="0.0.1" xml:id="UT22084-079-004-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
