--- a/translations/kangyur/placeholders/094-022_toh744a-vajrapatala_the_great_sovereign_tantra_of_vajrapani.xml
+++ b/translations/kangyur/placeholders/094-022_toh744a-vajrapatala_the_great_sovereign_tantra_of_vajrapani.xml
@@ -10,7 +10,8 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa phyag na rdo rje'i rgyud kyi rgyal po chen po rdo rje sa 'og ces bya ba/</title>
                 <title type="otherTitle" xml:lang="en">[Note: not in Toh. This brief text appears in Degé with this title in the colophon but no initial title. It may simply be an addendum to the previous text.]</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-094-022"/>
             </publicationStmt>
             <sourceDesc>
@@ -24,9 +25,19 @@
                     <idno source-id="O1JC114941JC12487" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:33:49 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-094-022-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T13:46:58.733Z" type="translation-status" status="3" xml:id="UT22084-094-022-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T13:46:58.733Z" type="text-version" status="0.0.1" xml:id="UT22084-094-022-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
